--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "resolve-url-loader": "^4.0.0",
     "sass": "^1.35.0",
     "sass-loader": "^12.1.0",
     "typescript": "^4.1.3",
