进行相关设置，使得手机添加桌面图标方便

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Ionic App",
-  "name": "My Ionic App",
+  "short_name": "雷火WEB版",
+  "name": "雷火WEB版",
   "icons": [
     {
       "src": "assets/icon/logo-web-mini.png",
